--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "testDetect": "NODE_ENV=testing jest --detectOpenHandles"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.8.0"
   },
