--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
